# hikari-bot-template

./: .env.sample  README.md  pyproject.toml
src/: __main__.py
src/core/: bot.py  client.py  config.py
src/modules/: __init__.py  ping.py
